# voice-assistant

./: .env  .env.example  .gitignore  Makefile  Pytest.ini  README.md  consts.py  create_prescription.py  diagnosis.py  docker-compose.yml  main.py  otel-config.yaml  package-lock.json  package.json  perform_translation.py  prescription.txt  project-structure.md  requirements.txt  requirments.txt  setup.py  speechOps.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: app.py
backend/src/api/: main.py  schemas.py
backend/src/api/middleware/: __init__.py  error_handler.py  logging.py
backend/src/api/routes/: __init__.py  diagnosis.py  health_checks.py  helpers.py  monitoring.py  prescription.py  sessions.py  workflow_routes.py
backend/src/api/routes/muti_agent/: __init__.py  health_checks.py  monitoring.py  sessions_v2.py
backend/src/api/schemas/: __init__.py  diagnosis.py  patient.py  session.py
backend/src/config/: __init__.py  monitoring.py  settings.py
backend/src/core/: __init__.py  diagnosis.py  llm_manager.py  mcp_client.py  prescription.py
backend/src/core/crew_ai/: __init__.py  constants.py  medical_agents.py  medical_crew.py
backend/src/core/crew_ai/agents/: __init__.py  medical_agents.py
backend/src/core/crew_ai/tools/: __init__.py  gmail_mcp_tools.py  mcp_client.py  medical_tools.py
backend/src/core/crew_ai/workflows/: __init__.py  mcp_workflow.py  medical_workflow.py  session_workflow.py  task_descriptions.py
backend/src/core/multi_agent/: __init__.py  llm_manager.py
backend/src/core/multi_agent/agents/: __init__.py  base_agent.py  diagnosis_agent.py  medication_agent.py  prescription_agent.py  qa_agent.py  stt_agent.py  translation_agent.py  tts_agent.py
backend/src/core/multi_agent/coordinator/: agent_coordinator.py  state.py
backend/src/core/multi_agent/tools/: analysis_tools.py  prescription_tools.py  voice_tools.py
backend/src/core/multi_agent/workflow/: __init__.py  graph_builder.py  state_manager.py
backend/src/integration/: __init__.py  muti_agent_service.py  route_handlers.py
backend/src/monitoring/: __init__.py  cache_manager.py  dashboard.py  load_balancer.py  performance_monitor.py
backend/src/services/: __init__.py  session_store.py  speech.py  translation.py
backend/src/utils/: __init__.py  backstories.py  consts.py  exceptions.py  helpers.py  task_descriptions.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_monitoring_health.py  test_session_lifecycle.py  test_sessions_api.py  test_workflow_routes.py
backend/tests/unit/: test_cache_manager.py  test_consts.py  test_diagnosis.py  test_helpers.py  test_mcp_workflow.py  test_monitoring.py  test_session_store.py  test_session_workflow.py  test_translation.py
frontend/: .eslintrc.cjs  Dockerfile  env.d.ts  index.html  nginx.conf  package-lock.json  (+5 more)
(+61 files in other folders)
