[project]
name = "docjarvis"
version = "2.0.0"
description = "AI-powered multilingual medical consultation assistant"
requires-python = ">=3.11"

dependencies = [
    # Core Web Framework
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "python-multipart==0.0.27",
    "httpx==0.28.1",

    # Data Validation & Logic
    "pydantic==2.12.5",
    "pydantic-settings==2.10.1",
    "typing-extensions==4.15.0",

    # Language & Audio Processing
    "SpeechRecognition==3.10.0",
    "gTTS==2.5.1",
    "pydub==0.25.1",
    "langdetect==1.0.9",
    "deep-translator==1.11.4",
    "tiktoken==0.12.0",

    # Observability
    "opentelemetry-api==1.34.1",
    "opentelemetry-sdk==1.34.1",
    "opentelemetry-exporter-otlp==1.34.1",
    "opentelemetry-instrumentation-fastapi==0.55b1",
    "opentelemetry-instrumentation-httpx==0.55b1",

    # AI / LLM Stack
    "langchain-core==1.3.2",
    "langchain-openai==1.2.1",
    "langchain-google-genai==4.2.2",
    "google-generativeai==0.8.6",
    "langsmith==0.8.0",

    # Multi-Agent Framework
    "crewai[tools]==1.14.4",
    "mcp==1.26.0",

    # Infrastructure & Utilities
    "psutil==7.2.2",
    "grpcio==1.80.0",
    "redis[hiredis]==7.4.0",
    "python-dotenv==1.2.2"
]

[tool.pytest.ini_options]
async_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "asyncio: async test",
    "unit: unit tests (no external deps)",
    "integration: integration tests (real FastAPI app, mocked externals)",
]